--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "Vkuss server",
+  "name": "vkuss-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
     "start": "node src/server.js"
   },
   "keywords": [],
+  "engines": {
+    "node": "10.15.3"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,7 +20,10 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
-    "morgan": "^1.9.1"
+    "knex": "^0.18.2",
+    "morgan": "^1.9.1",
+    "pg": "^7.11.0",
+    "postgrator": "^3.10.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
